  in 2, 4 or 16 colors now! (joy)
- bios/screen.[ch] - setphys() safeguard check (joy)
- bios/nvram.c - fixed wrong offset, added static buffer for nvram data (joy)
- bios/machine.c - early initialization of nvram (joy)
- bios/screen.c - make use of NVRAM boot resolution setting. Tested on
  ARAnyM (aranym -e -r <X>) and should work also on real Falcon030. (joy)
- doc/announce.txt - updated for 0.6 release (MAD)

21. Feb. 2003
- bios/lineainit.c - quick patch to get 8x16 font in all resolutions with
  screen height >= 400 (joy)
- include/config.h - boot countdown time increased to 8 seconds (joy)
- po/cs.po - updated (joy)

27. Feb. 2003
- vdi/* - found bug in C-pattern filling, enabled again (MAD)
- Makefile - EmuCON is compiled in by default now (MAD)

03. Mar. 2003
- aes/geminit.c, gemshlib.c : Experimental support for #Z line in EMUDESK.INF
  to start another desktop instead of the ROM desktop. (THH)

08. Mar. 2003
- vdi/mounout.c - fixed bug in clipbox() (MAD)

10. Mar. 2003
- bdos/time.c - implemented Tgettime() and Tgetdate() (MAD)

22. Mar. 2003
- bdos/bdosmain.c - ripped out unused oscnt variable (MAD)
- bdos/bdosmain.c - added two wrappers to avoid compiler warnings (MAD)
- include/bindbios.h - now use fully prototyped inline BIOS bindings (MAD)

23. Mar. 2003
- include/xbindbios.h - now use fully prototyped inline XBIOS bindings (MAD)

12. Apr. 2003
- bios/screen.c - some debug prints (LVL)
- bios/vectors.S - the new palette pointer to load during VBL now erased when
  loaded (previously it was loaded at every VBL!) (LVL)
- include/config.h, bios/kprint.c - kprintf() prints to MIDI out port when
  MIDI_DEBUG_PRINT flag activated (to get debug prints e.g. on Steem) (LVL)
- fixed some .cvsignore files (LVL)

13. Apr. 2003
- bios/sound.c - Fixed a wrong byte in the system bell data. (THH)
- include/xbiosbind.h - Added binding for Dosound(). (THH)
- aes/optimize.c - sound() now really makes sound with Dosound()! (THH)